--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,39 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.App {
+  height: 100%;
+}
+
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 body {
   overflow: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .main {
   position: absolute;
   z-index:1;
   width: 100vw;
-  height: auto;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .particle-effect {
   min-height: 100vh;
+  height: 100%
 }
 
 .particle-effect-ctr {
@@ -30,4 +44,5 @@ body {
   left:0;
   z-index:-1;
   min-height: 100vh;
+  height: 100%
 }
