--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,10 +11,14 @@ header {
     justify-content: flex-end;
     align-items: center;
     color: #031927;
+    position: fixed;
+    z-index: 10;
+    box-shadow: 0px 5px 20px 6px #00000045;
 }
 
 ul {
     color: #BA1200;
+    display: inline;
 }
 
 li {
@@ -25,4 +29,31 @@ li {
 h1 {
     margin: 0;
     margin-right: auto;
+}
+
+.wiki-link {
+    text-decoration: none;
+    color: white;
+    background-color: #BA1200;
+    padding: 10px 15px;
+    text-align: center;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+
+.wiki-link:hover {
+    background-color: #d31702;
+    transition: 0.2s ease;
+}
+
+.wiki-link>li {
+    margin-right: 0px;
+}
+
+@media screen and (max-width: 700px){
+
+    ul {
+        display: none;
+    }
+
 }
